--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -6,13 +6,33 @@
     align-items: center;
     justify-content: flex-end;
 
+    .create-product-link {
+        margin-right: auto;
+        text-decoration: none;
+        padding: 10px 15px;
+        border-radius: 10px;
+
+        font-size: 1rem;
+        font-weight: 600;
+        color: #000;
+        background-color: #fff;
+        box-shadow: v.$shadow-low;
+
+        cursor: pointer;
+        transition: .3s;
+
+        &:hover {
+            background-color: #eee;
+        }
+    }
+
     &__filters {
         display: flex;
         align-items: center;
         gap: 1.2rem;
 
         .filter {
-            border: 1px solid #eee;
+            border: none;
             border-radius: 10px;
             outline: none;
             padding: 10px 15px;
