--- a/src/styles/product-page.scss
+++ b/src/styles/product-page.scss
@@ -7,16 +7,82 @@
     justify-content: center;
     align-items: center;
 
-    .product {
-        width: 70%;
+    .product-card {
+        width: 50%;
         min-height: 65vh;
         background-color: #fff;
         box-shadow: v.$shadow-low;
         border-radius: 20px;
+        padding: 20px;
 
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
+        .product {
+            width: 100%;
+            height: 100%;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+
+            p {
+                margin: 0;
+            }
+
+            &__ingredients,
+            &__diet,
+            &__price,
+            &__time-cooking {
+                width: 100%;
+                display: flex;
+                flex-wrap: wrap;
+                align-items: center;
+                gap: 10px;
+            }
+
+            &__instruction-cook {
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+
+                .image {
+                    width: 100%;
+                    height: 100%;
+
+                    img {
+                        height: 100%;
+                        width: 100%;
+                        object-fit: cover;
+                        border-radius: 20px;
+                        box-shadow: v.$shadow-low;
+                    }
+                }
+
+                .instruction {
+                    &__list {
+                        list-style: decimal;
+                        text-align: left;
+
+                        .instruction-item:not(:last-child) {
+                            margin-bottom: 10px;
+                        }
+                    }
+                }
+            }
+
+            &__back {
+                display: inline-block;
+                width: 100px;
+                align-self: center;
+                text-decoration: none;
+                padding: 10px 15px;
+                background-color: #fff;
+                box-shadow: v.$shadow-low;
+                border-radius: 10px;
+                transition: .3s;
+                color: rgb(78, 78, 248);
+
+                &:hover {
+                    background-color: rgba(236, 236, 236, .7);
+                }
+            }
+        }
     }
 }
